# fastapi-blend-db-demo

./: README.md  pyproject.toml
fastapi_blend_db/: app.py  app_demo.py
fastapi_blend_db/tests/: test_app.py
